--- a/j_farm_project/Jirani/templates/edit_tractor.html
+++ b/j_farm_project/Jirani/templates/edit_tractor.html
@@ -1,10 +1,10 @@
-{% extends 'jirani/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <h2>Add a tractor</h2>
+    <h2>Edit a tractor</h2>
     <form method="post">
         {% csrf_token %}
         {{ tractor_form.as_p }}
-        <input type="submit" value="Add">
+        <input type="submit" value="Update">
     </form>
 {% endblock %}
